--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-2">Welcome to our Feedback Portal</h1>
+    <h2 class="display-4">Please Log In</h2>
+    <br />
+    <p>If you want to use our site you need to have an account. To create one navigate to <a asp-controller="Account" asp-action="Create">/Account/Create</a></p>
 </div>
