--- a/Views/Clients/Index.cshtml
+++ b/Views/Clients/Index.cshtml
@@ -6,55 +6,67 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-
-<form asp-controller="Clients" asp-action="Index" method="get">
+@if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+{
     <p>
-        Client Name: <input type="text" asp-for="SearchString" />
-        <input type="submit" value="Filter" />
+        <a asp-action="Create">Create New</a>
     </p>
-</form>
+}
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Clients[0].Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Clients[0].Number)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Clients[0].Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Clients[0].Feedbacks)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Clients)
-        {
+    <form asp-controller="Clients" asp-action="Index" method="get">
+        <p>
+            Client Name: <input type="text" asp-for="SearchString" />
+            <input type="submit" value="Filter" />
+        </p>
+    </form>
+
+    <table class="table">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Number)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.Clients[0].Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Clients[0].Number)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Clients[0].Email)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Clients[0].Feedbacks)
+                </th>
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Clients)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Number)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+
+                    <td>
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
+                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                        }|
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin") || User.IsInRole("Employee"))
+                        {
+                            <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                        }|
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
+                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        }
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
